added navbar on header

--- a/index.html
+++ b/index.html
@@ -20,9 +20,25 @@
 		
 			<div class="row" id="header">
 				<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
-				<div class="col-sm-10" id="title"><center>Dojo d'aikido de Papeete</center></div>
-				<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
+				<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
 			</div>
+			
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" href="index.html">Accueil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="aikido.html">L'aikido</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cours.html">Les cours</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</nav>
 			
 			<div class="row" id="breakingNews">
 				<div class="col-sm-12">
