Alert and alert JS functions added

--- a/aikido.html
+++ b/aikido.html
@@ -17,32 +17,32 @@
 	<div class="container-fluid fixed-top" id="header_container">
 		<nav class="fixed-top">
 		
-		<div class="row" id="header">
-			<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
-			<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
-		</div>
-		
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark>
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Accueil</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="aikido.html">L'aikido</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="cours.html">Les cours</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="contact.html">Contact</a>
-				</li>
-			</ul>
-		
-		</nav>
-		</nav>
+			<div class="row" id="header">
+				<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
+				<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
+			</div>
+			
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Accueil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="aikido.html">L'aikido</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cours.html">Les cours</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</nav>
+			
+			</nav>
 	</div>
 	
-	<div class="content">
+	<div class="content" id="mainContent">
 		1.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
 		<br/>
 		<br/>
