--- a/contact.html
+++ b/contact.html
@@ -17,32 +17,32 @@
 	<div class="container-fluid fixed-top" id="header_container">
 		<nav class="fixed-top">
 		
-		<div class="row" id="header">
-			<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
-			<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
-		</div>
-		
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark>
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Accueil</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="aikido.html">L'aikido</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="cours.html">Les cours</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="contact.html">Contact</a>
-				</li>
-			</ul>
-		
-		</nav>
+			<div class="row" id="header">
+				<div class="col-sm-1" id="logo"><img src="asset/logo.gif"></div>
+				<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
+			</div>
+			
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Accueil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="aikido.html">L'aikido</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cours.html">Les cours</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</nav>
+			
 		</nav>
 	</div>
 	
-	<div class="content">
+	<div class="content" id="mainContent">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col">
