--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 
 <body>
+
 	<div class="container-fluid fixed-top" id="header_container">
 		<nav class="fixed-top">
 		
@@ -23,7 +25,7 @@
 				<div class="col-sm-11" id="title"><center>Dojo d'aikido de Papeete</center></div>
 			</div>
 			
-			<nav class="navbar navbar-expand-sm bg-dark navbar-dark>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 				<ul class="navbar-nav">
 					<li class="nav-item">
 						<a class="nav-link active" href="index.html">Accueil</a>
@@ -40,20 +42,17 @@
 				</ul>
 			</nav>
 			
-			<div class="row" id="breakingNews">
-				<div class="col-sm-12">
-					<marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-					Le cours du 28/04/2018 s'arrêtera à 10h au lieu de 12h.
-					</marquee>				
-				</div>
+			<div class="alert alert-info alert-dismissible fade show" id="breakingNews">
+				<button type="button" class="close" data-dismiss="alert" aria-label="close" id="closeAlertButton" onclick="setTimeout(resetOffsetToDefault, 100);">&times;</button>
+				Le cours du 28/04/2018 s'arrêtera à 10h au lieu de 12h.						
 			</div>
-		
+					
 		</nav>
 	</div>
 	
-	<div class="content">
+	<div class="content" id="mainContent">
 		
-		<div class="row">
+			<div class="row">
 			<div class="col-sm-12" id="welcomeText">
 			1.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
 			</div>
@@ -111,6 +110,11 @@
 	<center>Copyright 2018</center>
 	<br/>
 	</footer>
+
+
+	<script>
+		adjustOffset();
+	</script>
 	
 </body>
 
