Added content to all pages

--- a/aikido.html
+++ b/aikido.html
@@ -43,53 +43,63 @@
 	</div>
 	
 	<div class="content" id="mainContent">
-		1.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+
+		<div class="row">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6 embed-responsive embed-responsive-16by9">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0afWMLpO5oE?start=132" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
+
 		<br/>
 		<br/>
-		2.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+		<hr>
+
+		<div class="row">
+			<div class="col-sm-5">
+				<img src="asset/ueshiba.jpg" class="img-responsive img-thumbnail">
+			</div>
+				
+			<div class="col-sm-7">
+				<p>C'est en 1883 que naît au Japon Morihei Ueshiba, le fondateur de l'aikido. Enfant déjà, il s'intéresse à la prière et la méditation, d'autant que sa constitution est fragile et qu'il est souvent malade. Malgré cela, il s'astreint aux cours des années à se forger un corps puissant à force d'exercice. Il étudie aussi diverses écoles traditionnelles d'art martiaux où il acquiert déjà une habileté aux armes et à mains nues.</p>
+				<p>En parallèle, il s'engage dans l'armée à 20 ans, où il combat dans la guerre russo-japonaise en tant que membre d'un régiment d'infanterie. Il quittera l'armée après 3 ans, promu au grade de sergent par son aptitude au combat.</p>
+				<p>Cependant, ce sont deux rencontres importantes de sa vie qui vont se révéler fondamentales dans la création de l'aikido : la première avec Sokaku Takeda, héritier des techniques secrètes du clan Aizu jusque-là restées cachées au grand public, et la seconde avec Onisaburō Deguchi, confondateur de l'Ōmoto-kyō, une religion inspirée du Shintō.</p>
+			</div>
+
+		</div>
+
+		<br>
+		<hr>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-7">
+				<p>Adapté des techniques guerrières de Takeda, l'aikido est un art martial qui vise non pas à vaincre ou détruire l'adversaire, mais à le neutraliser sans violence. "Aikidō" est composé de 3 caractères qui signifient "union, harmonie", "énergie", et "voie". L'aikido est donc "la voie de l'union des énergies". A ce titre, la discipline ne se focalise pas sur des techniques physiquement exigeantes ou sur des frappes, mais essentiellement sur des projections et des techniques de contrôle.</p>
+				<p>N'étant pas fondé sur la force physique, l'aikido est adapté à un public de tout âge et de tout sexe, sans pré-requis particulier (sauf à être médicalement apte).</p>
+			</div>
+
+			<div class="col-sm-5">
+				<img src="asset/cours-link.jpg" class="img-responsive img-thumbnail">
+			</div>
+
+		</div>
+
 		<br/>
-		<br/>
-		3.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		4.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		5.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		6.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		7.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		8.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		9.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		10.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		11.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		12.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		13.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		14.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		15.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		
-	<br/>
-	<br/>
-		
+		<hr>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-5">
+				<img src="asset/contact-link.jpg" class="img-responsive img-thumbnail">
+			</div>
+
+			<div class="col-sm-7">
+				Fruit d'une réflexion philosophique et métaphysique tout autant que d'un entraînement physique, l'aikido véhicule des valeurs d'harmonie, de non-violence et de coexistence. Dans cette optique, il refuse toute forme de compétition et se focalise sur le travail à deux : chacun est le partenaire qui permet à l'autre de progresser et de se sublimer, à travers un entraînement régulier.
+			</div>
+
+		</div>
+
 	</div>
 	
 	<footer>
