--- a/cours.html
+++ b/cours.html
@@ -43,53 +43,56 @@
 	</div>
 	
 	<div class="content" id="mainContent">
-		1.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		2.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		3.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		4.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		5.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		6.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		7.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		8.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		9.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		10.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		11.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		12.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		13.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		14.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		15.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
 		
+		<div class="row">
+			<div class="col-sm-4">
+				<u>Horaires des cours (le samedi matin uniquement) :</u><br/>
+					<ul>
+						<li>de 8h à 9h30 : cours "basique"</li>
+						<li>de 9h30 à 10h30 : cours d'armes</li>
+						<li>de 10h30 à 12h : cours "avancé"</li>
+					</ul>
+					Vous pouvez participer à tous les cours, quel que soit votre niveau ! Le cours "avancé" se focalise plus sur des sensations internes importantes à haut niveau, mais il est parfaitement possible de le suivre en tant que débutant.
+			</div>
+
+			<div class="col-sm-4">
+				<u>Tarifs et documents requis:</u><br/>
+				<p>Les cotisations initiales s'élèvent à :
+				<ul>
+					<li>15 000 xpf pour les adultes (plus de 16 ans)</li>
+					<li>10 000 xpf pour les enfants</li>
+					<li>des tarifs dégressifs s'appliquent pour les membres d'une même famille.</li>
+				</ul></p>
+				<p>A la cotisation s'ajoute le coût de la licence pour l'adhésion à la Fédération Polynésienne d'Aikido, qui s'élève à  :
+				<ul>
+					<li>5 000 xpf par adulte</li>
+					<li>3 000 xpf par enfant</li>
+					<li>les coûts de licence ne sont pas dégressifs.</li>
+				</ul>
+				Pour connaître le tarif exact de votre inscription si vous venez en famille, contactez un des responsables du club (<a href="contact.html">page "Contact"</a>).</p>
+				<p>Pour la première inscription, il est également demandé :
+				<ul>
+					<li>la feuille d'inscription dûment remplie (à récupérer sur place)</li>
+					<li>3 photos d'identité</li>
+					<li>un certificat médical d'aptitude à la pratique de l'aikido, de moins de 6 mois.</li>
+				</ul></p>
+			</div>
+
+			<div clas="col-sm-4">
+				<u>Equipement :</u><br/>
+				<p>Pour votre premier cours d'essai, vous pouvez venir en vêtements de sport (longs).</p>
+				<p>Si vous pratiquez régulièrement, vous devrez acheter un <i>keikogi</i>, qu'on appelle souvent un kimono. Vous en trouverez dans les grands magasins de sport. Vous pouvez choisir la version "judo", plus épaisse mais qui amortit mieux les chutes, ou la version "karaté", plus légère. Le keikogi se compose d'un pantalon et d'une veste, auxquels il faudra ajouter une ceinture (<i>obi</i>), blanche pour les débutants.</p>
+				<p>Peut-être vous posez-vous des questions sur cette espèce de jupe qu'on peut voir sur beaucoup de pratiquants ? C'est en fait un pantalon très ample, le <i>hakama</i>, qui est réservé aux pratiquants ayant atteint au minimum le 1er kyu, dernier grade avant la fameuse ceinture noire. Ce n'est donc pas un achat prioritaire !</p>
+			</div>
+		</div>
+
 	<br/>
 	<br/>
-		
+	<hr>
+
+
+
+	
 	</div>
 	
 	<footer>
