--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			
 			<div class="alert alert-info alert-dismissible fade show" id="breakingNews">
 				<button type="button" class="close" data-dismiss="alert" aria-label="close" id="closeAlertButton" onclick="setTimeout(resetOffsetToDefault, 100);">&times;</button>
-				Le cours du 28/04/2018 s'arrêtera à 10h au lieu de 12h.						
+				Attention : le cours du 28/04/2018 s'arrêtera à 10h au lieu de 12h.						
 			</div>
 					
 		</nav>
@@ -52,62 +52,67 @@
 	
 	<div class="content" id="mainContent">
 		
-			<div class="row">
+		<div class="row">
 			<div class="col-sm-12" id="welcomeText">
-			1.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+			<h1>Bienvenue sur le site du dojo d'aikido de Vaitavatava à Papeete !</h1></br>
+			</br>
+			Que vous soyez débutant(e), pratiquant(e) confirmé(e), ou tout simplement intéressé(e) par notre belle discipline, vous trouverez ici tous les renseignements nécessaires.<br>
 			</div>
 		</div>
 		
 		<br/>
+		<hr>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-5">
+				<a href="aikido.html"><img src="asset/aikido-link.jpg" class="img-responsive img-thumbnail"></a>
+			</div>
+
+			<div class="col-sm-7">
+				"L'aikido", kesako au juste ? Cette discipline est un art martial japonais, créé par Morihei Ueshiba au cours de la première moitié du 20è siècle, après de nombreuses années d'études des styles classiques et de recherche. Avec le judo et le karaté, il fait partie des 3 "Grands Budōs" modernes. Venez en apprendre plus <a href="aikido.html">ici</a>.
+			</div>
+
+		</div>
+
+		<br>
+		<hr>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-7">
+				Horaires, tarifs, équipement, professeurs... Pour tout savoir sur les cours que nous dispensons, c'est par <a href="cours.html">ici</a> !
+			</div>
+
+			<div class="col-sm-5">
+				<a href="cours.html"><img src="asset/cours-link.jpg" class="img-responsive img-thumbnail"></a>
+			</div>
+
+		</div>
+
 		<br/>
-		2.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+		<hr>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-5">
+				<a href="contact.html"><img src="asset/contact-link.jpg" class="img-responsive img-thumbnail"></a>
+			</div>
+
+			<div class="col-sm-7">
+				Vous avez une question ? Besoin de plus d'informations ? Ou bien vous cherchez tout simplement à nous trouver ? <a href="contact.html">Par ici</a> pour nous contacter !
+			</div>
+
+		</div>
+
 		<br/>
-		<br/>
-		3.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		4.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		5.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		6.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		7.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		8.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		9.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		10.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		11.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		12.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		13.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		14.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		<br/>
-		<br/>
-		15.Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-		
-	<br/>
-	<br/>
-		
+		<hr>
+		<br>
+
 	</div>
 	
 	<footer>
-	<center>Copyright 2018</center>
+	<center>Copyright © 2018</center>
 	<br/>
 	</footer>
 
