Typo fix in cours.html Added content in all pages Changed footer Renamed images

--- a/aikido.html
+++ b/aikido.html
@@ -46,8 +46,18 @@
 
 		<div class="row">
 			<div class="col-sm-3"></div>
-			<div class="col-sm-6 embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0afWMLpO5oE?start=132" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<div class="col-sm-6">
+				<div class="row">
+					<div class="col-sm-12 embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0afWMLpO5oE?start=132" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<b><u>Démonstration du Doshu Moriteru Ueshiba, petit-fils du fondateur</u></b>
+					</div>
+				</div>
 			</div>
 			<div class="col-sm-3"></div>
 		</div>
@@ -58,7 +68,7 @@
 
 		<div class="row">
 			<div class="col-sm-5">
-				<img src="asset/ueshiba.jpg" class="img-responsive img-thumbnail">
+				<img src="asset/aikido-ueshiba.jpg" class="img-responsive img-thumbnail">
 			</div>
 				
 			<div class="col-sm-7">
@@ -76,11 +86,11 @@
 		<div class="row">
 			<div class="col-sm-7">
 				<p>Adapté des techniques guerrières de Takeda, l'aikido est un art martial qui vise non pas à vaincre ou détruire l'adversaire, mais à le neutraliser sans violence. "Aikidō" est composé de 3 caractères qui signifient "union, harmonie", "énergie", et "voie". L'aikido est donc "la voie de l'union des énergies". A ce titre, la discipline ne se focalise pas sur des techniques physiquement exigeantes ou sur des frappes, mais essentiellement sur des projections et des techniques de contrôle.</p>
-				<p>N'étant pas fondé sur la force physique, l'aikido est adapté à un public de tout âge et de tout sexe, sans pré-requis particulier (sauf à être médicalement apte).</p>
+				<p>N'étant pas fondé sur la force, l'aikido est adapté à un public de tout âge,tout sexe et tout physique, sans pré-requis particulier (sauf à être médicalement apte).</p>
 			</div>
 
 			<div class="col-sm-5">
-				<img src="asset/cours-link.jpg" class="img-responsive img-thumbnail">
+				<img src="asset/aikido-pour-tous.jpg" class="img-responsive img-thumbnail">
 			</div>
 
 		</div>
@@ -91,7 +101,7 @@
 
 		<div class="row">
 			<div class="col-sm-5">
-				<img src="asset/contact-link.jpg" class="img-responsive img-thumbnail">
+				<img src="asset/aikido-entraide.jpg" class="img-responsive img-thumbnail">
 			</div>
 
 			<div class="col-sm-7">
@@ -100,11 +110,17 @@
 
 		</div>
 
+		<br/>
+		<hr>
+		<br>
+
 	</div>
 	
 	<footer>
-	<center>Copyright 2018</center>
-	<br/>
+		Copyright © 2018
+		<br/>
+		Webmaster : <a href="mailto:jerome.chansin@yahoo.fr">jerome.chansin@yahoo.fr</a>
+		<br/>
 	</footer>
 	
 </body>
