--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,13 @@
 	<div class="content" id="mainContent">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6 embed-responsive">
+				<div class="col-sm-5 embed-responsive">
 					<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1345.0727853664273!2d-149.55559334456666!3d-17.534209200817354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x769a39f06857e417%3A0xfed9c2d611ef3e5b!2sDojo+Vaitavatava+Municipal+Hall+Martial+Arts+De+L&#39;union+Sacr%C3%A9e!5e0!3m2!1sen!2s!4v1524794431236" frameborder="0" style="border:0" allowfullscreen margin="auto"></iframe>
 				</div>
 				
+				<div class="col-sm-1">
+				</div>
+
 				<div class="col-sm-6">
 					<p>
 						<u>Pour plus d'informations, appelez :</u>
@@ -75,14 +78,18 @@
 				
 			</div>
 		</div>
-	<br/>
-	<br/>
+		
+		<br/>
+		<hr>
+		<br>
 		
 	</div>
 	
 	<footer>
-	<center>Copyright 2018</center>
-	<br/>
+		Copyright © 2018
+		<br/>
+		Webmaster : <a href="mailto:jerome.chansin@yahoo.fr">jerome.chansin@yahoo.fr</a>
+		<br/>
 	</footer>
 	
 </body>
