--- a/cours.html
+++ b/cours.html
@@ -78,26 +78,29 @@
 				</ul></p>
 			</div>
 
-			<div clas="col-sm-4">
+			<div class="col-sm-4">
 				<u>Equipement :</u><br/>
 				<p>Pour votre premier cours d'essai, vous pouvez venir en vêtements de sport (longs).</p>
 				<p>Si vous pratiquez régulièrement, vous devrez acheter un <i>keikogi</i>, qu'on appelle souvent un kimono. Vous en trouverez dans les grands magasins de sport. Vous pouvez choisir la version "judo", plus épaisse mais qui amortit mieux les chutes, ou la version "karaté", plus légère. Le keikogi se compose d'un pantalon et d'une veste, auxquels il faudra ajouter une ceinture (<i>obi</i>), blanche pour les débutants.</p>
 				<p>Peut-être vous posez-vous des questions sur cette espèce de jupe qu'on peut voir sur beaucoup de pratiquants ? C'est en fait un pantalon très ample, le <i>hakama</i>, qui est réservé aux pratiquants ayant atteint au minimum le 1er kyu, dernier grade avant la fameuse ceinture noire. Ce n'est donc pas un achat prioritaire !</p>
+				<p>Enfin, la pratique de l'aikido inclut la pratique des armes : sabre et bâton. Ces derniers peuvent être prêtés aux pratiquants qui débutent, cependant il est recommandé à ceux qui le peuvent de s'acheter leurs armes personnelles.</p>
 			</div>
 		</div>
 
 	<br/>
-	<br/>
 	<hr>
+	<br/>
 
 
 
-	
+
 	</div>
 	
 	<footer>
-	<center>Copyright 2018</center>
-	<br/>
+		Copyright © 2018
+		<br/>
+		Webmaster : <a href="mailto:jerome.chansin@yahoo.fr">jerome.chansin@yahoo.fr</a>
+		<br/>
 	</footer>
 	
 	
