--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		<div class="row">
 			<div class="col-sm-5">
-				<a href="aikido.html"><img src="asset/aikido-link.jpg" class="img-responsive img-thumbnail"></a>
+				<a href="aikido.html"><img src="asset/index-aikido-link.jpg" class="img-responsive img-thumbnail"></a>
 			</div>
 
 			<div class="col-sm-7">
@@ -85,7 +85,7 @@
 			</div>
 
 			<div class="col-sm-5">
-				<a href="cours.html"><img src="asset/cours-link.jpg" class="img-responsive img-thumbnail"></a>
+				<a href="cours.html"><img src="asset/index-cours-link.jpg" class="img-responsive img-thumbnail"></a>
 			</div>
 
 		</div>
@@ -96,7 +96,7 @@
 
 		<div class="row">
 			<div class="col-sm-5">
-				<a href="contact.html"><img src="asset/contact-link.jpg" class="img-responsive img-thumbnail"></a>
+				<a href="contact.html"><img src="asset/index-contact-link.jpg" class="img-responsive img-thumbnail"></a>
 			</div>
 
 			<div class="col-sm-7">
@@ -112,7 +112,9 @@
 	</div>
 	
 	<footer>
-	<center>Copyright © 2018</center>
+	Copyright © 2018
+	<br/>
+	Webmaster : <a href="mailto:jerome.chansin@yahoo.fr">jerome.chansin@yahoo.fr</a>
 	<br/>
 	</footer>
 
